--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
     <version>7.4.0</version>
     <scope>test</scope>
 </dependency>
+    <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.2</version>
+</dependency>
     
   </dependencies>
 
